fix paragraph spacing

--- a/src/pages/Studies/components/HeaderSection/HeaderSection.module.scss
+++ b/src/pages/Studies/components/HeaderSection/HeaderSection.module.scss
@@ -13,3 +13,7 @@
 .chip-row {
     max-width: px-to-rem(500);
 }
+
+.description:not(:last-of-type) {
+    margin-bottom: spacing(300); // 24px
+}
